Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,7 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'init'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-azurerm_landingzone-framework/environments/'
-    backendServiceArm: 'wif'
+    workingDirectory: '$(System.DefaultWorkingDirectory)\environments'
     backendAzureRmStorageAccountName: 'stroageaccountdotnet'
     backendAzureRmContainerName: 'container'
     backendAzureRmKey: 'terraform.tfstate'
