--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,11 +6,13 @@ steps:
   inputs:
     terraformVersion: 'latest'
 
+
 - task: TerraformTask@5
   inputs:
     provider: 'azurerm'
     command: 'init'
     workingDirectory: '$(System.DefaultWorkingDirectory)\environments'
+    backendServiceArm: 'wif'
     backendAzureRmStorageAccountName: 'stroageaccountdotnet'
     backendAzureRmContainerName: 'container'
     backendAzureRmKey: 'terraform.tfstate'
