Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,11 @@ steps:
     backendAzureRmStorageAccountName: 'stroageaccountdotnet'
     backendAzureRmContainerName: 'container'
     backendAzureRmKey: 'terraform.tfstate'
+
+
+- task: TerraformTask@5
+  inputs:
+    provider: 'azurerm'
+    command: 'plan'
+    workingDirectory: '$(System.DefaultWorkingDirectory)\environments'
+    environmentServiceNameAzureRM: 'wif'
