--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,3 +29,12 @@ steps:
     command: 'plan'
     workingDirectory: '$(System.DefaultWorkingDirectory)\environments'
     environmentServiceNameAzureRM: 'wif'
+
+
+- task: TerraformTask@5
+  inputs:
+    provider: 'azurerm'
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)\environments'
+    commandOptions: '--auto-apporve'
+    environmentServiceNameAzureRM: 'wif'
