--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
       backendServiceArm: 'wif'
       backendAzureRmStorageAccountName: 'stroageaccountdotnet'
       backendAzureRmContainerName: 'container'
-      backendAzureRmKey: 'terraform.tfstate'
+      backendAzureRmKey: 'terraform-loop.tfstate'
 
 
   - task: TerraformTask@5
