Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ jobs:
       backendServiceArm: 'wif'
       backendAzureRmStorageAccountName: 'stroageaccountdotnet'
       backendAzureRmContainerName: 'container'
-      backendAzureRmKey: 'terraform.tfstate'
+      backendAzureRmKey: 'terraform-loop.tfstate'
   - task: TerraformTask@5
     inputs:
       provider: 'azurerm'
