Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,5 +52,5 @@ jobs:
       provider: 'azurerm'
       command: 'apply'
       workingDirectory: '$(System.DefaultWorkingDirectory)\environments'
-      commandOptions: '--auto-apporve'
+      commandOptions: '--auto-approve'
       environmentServiceNameAzureRM: 'wif'
